--- a/templates/Dialog.html
+++ b/templates/Dialog.html
@@ -63,7 +63,7 @@
         </div>
         <div class="dialog-buttons">
             <div class="dialog-buttons-gradient">
-                <input type="submit" value="Сохранить" class="button green">
+                <input type="submit" value="Объединить" class="button green">
                 <i class="icon16 loading" style="display:none;"></i>
                 <a class="cancel" href="#">Отмена</a>
                 <a style="display:none;" class="close" href="{$wa_url}webasyst/shop/?action=orders">Закрыть</a>
