--- a/templates/Dialog.html
+++ b/templates/Dialog.html
@@ -11,7 +11,7 @@
                 <table class="zebra single-lined padded" id="order-list">
                     <thead>
                         <tr class="header">
-                            <th><input type="checkbox" class="s-select-all"></th>
+                            <th></th>
                             <th>Заказ</th>
                             <th>Дата</th>
                             <th>Покупатель</th>
@@ -67,6 +67,7 @@
                 <i class="icon16 loading" style="display:none;"></i>
                 <a class="cancel" href="#">Отмена</a>
                 <a style="display:none;" class="close" href="{$wa_url}webasyst/shop/?action=orders">Закрыть</a>
+                <span style="display:none;" class="mergerorder-response"></span>
             </div>
         </div>
     </div>
