--- a/templates/BackendOrder.html
+++ b/templates/BackendOrder.html
@@ -5,57 +5,65 @@
     </a>
 
     <div style="display: none;" id="mergerorder-dialog"></div>
-</li>
 
-
-<script type="text/javascript">
-    $(document).ready(function() {
-        $('#s-edit-merge').click(function() {
-            $(this).find('i.loading').show();
-            var url = '?plugin=mergerorder&action=dialog&order_id={$order.id}';
-            $.ajax({
-                type: 'GET',
-                url: url,
-                dataType: 'json',
-                success: function(data, textStatus, jqXHR) {
-                    if (data.status == 'ok') {
-                        $('#mergerorder-dialog').html(data.data);
-                        showDialog();
+    <script type="text/javascript">
+        $(document).ready(function() {
+            $('#s-edit-merge').click(function() {
+                $(this).find('i.loading').show();
+                var url = '?plugin=mergerorder&action=dialog&order_id={$order.id}';
+                $.ajax({
+                    type: 'GET',
+                    url: url,
+                    dataType: 'json',
+                    success: function(data, textStatus, jqXHR) {
+                        if (data.status == 'ok') {
+                            $('#mergerorder-dialog').html(data.data);
+                            showDialog();
+                        }
                     }
-                }
+                });
+
             });
+
+
+            function showDialog() {
+                $('#mergerorder-dialog').waDialog({
+                    disableButtonsOnSubmit: false,
+                    onLoad: function() {
+                        $('#s-edit-merge').find('i.loading').hide();
+                    },
+                    onSubmit: function(d) {
+                        var $this = $(this);
+                        $this.find('i.loading').show();
+                        $.ajax({
+                            type: 'POST',
+                            url: $this.attr('action'),
+                            data: $this.serialize(),
+                            dataType: 'json',
+                            success: function(data, textStatus, jqXHR) {
+                                if (data.status == 'ok') {
+                                    $this.find('.dialog-content-indent').html(data.data);
+                                    $this.find('.dialog-buttons input').hide();
+                                    $this.find('.dialog-buttons .cancel').hide();
+                                    $this.find('.dialog-buttons .close').show();
+                                    $this.find('i.loading').hide();
+                                }
+                                if (data.status == 'fail') {
+                                    $this.find('i.loading').hide();
+                                    $('.mergerorder-response').text(data.errors);
+                                    $('.mergerorder-response').css('color', 'red');
+                                    $('.mergerorder-response').show();
+                                    setTimeout(function() {
+                                        $('.mergerorder-response').hide();
+                                    }, 5000);
+                                }
+                            }
+                        });
+                        return false;
+                    }
+                });
+            }
 
         });
-
-
-        function showDialog() {
-            $('#mergerorder-dialog').waDialog({
-                disableButtonsOnSubmit: false,
-                onLoad: function() {
-                    $('#s-edit-merge').find('i.loading').hide();
-                },
-                onSubmit: function(d) {
-                    var $this = $(this);
-                    $this.find('i.loading').show();
-                    $.ajax({
-                        type: 'POST',
-                        url: $this.attr('action'),
-                        data: $this.serialize(),
-                        dataType: 'json',
-                        success: function(data, textStatus, jqXHR) {
-                            if (data.status == 'ok') {
-                                $this.find('.dialog-content-indent').html(data.data);
-                                $this.find('.dialog-buttons input').hide();
-                                $this.find('.dialog-buttons .cancel').hide();
-                                $this.find('.dialog-buttons .close').show();
-                                $this.find('i.loading').hide();
-                            }
-                        }
-                    });
-                    return false;
-                }
-            });
-        }
-
-    });
-</script>
+    </script>
+</li>
