--- a/templates/Dialog.html
+++ b/templates/Dialog.html
@@ -67,6 +67,7 @@
         </div>
         <div class="dialog-buttons">
             <div class="dialog-buttons-gradient">
+                <span><input type="checkbox" {if $email_notification}checked="checked"{/if} name="email_notification" value="1"/> Уведомление по E-mail</span>
                 <input type="submit" value="Объединить" class="button green">
                 <i class="icon16 loading" style="display:none;"></i>
                 <a class="cancel" href="#">Отмена</a>
