--- a/templates/actions/settings/Settings.html
+++ b/templates/actions/settings/Settings.html
@@ -10,72 +10,121 @@
         overflow-y: hidden;
         overflow-x: auto;
     }
+    .plugin-menu{
+        float: right;
+        list-style: none;
+    }
+    .plugin-menu li{
+        float: left;
+        margin-left: 10px;
+    }
+    .plugin-menu li a{
+        text-decoration: underline;
+    }
 </style>
-<h1>Объединение заказов</h1>
+{$settings = $plugin->getSettings()}
+<h1>{$plugin->getName()}</h1>
+<ul class="plugin-menu">
+    <li><a href="http://support.wa-plugins.ru/"><i class="icon16 ss pt hammer"></i>Поддержка</a></li>
+</ul>
 <div     class="fields form">
     <form action="?module=plugins&id=mergerorder&action=save" method="post" id="plugins-settings-form">
         {$wa->csrf()}
 
-        <div class="field">
-            <div class="name">
-                Статус плагина
-            </div>
-            <div class="value">
-                <select name="shop_mergerorder[status]">
-                    <option {if $settings.status == 1} selected="selected"{/if} value="1">Включен</option>
-                    <option {if $settings.status == 0} selected="selected"{/if} value="0">Выключен</option>
-                </select>
+        <div class="field-group">
+            <div class="field">
+                <div class="name">
+                    Статус плагина
+                </div>
+                <div class="value no-shift s-ibutton-checkbox">
+                    <input type="hidden" name="shop_mergerorder[status]" value="0">
+                    <input type="checkbox" id="ibutton-status" name="shop_mergerorder[status]" value="1"{if $settings.status} checked{/if}>
+                </div>
             </div>
         </div>
 
-        <div class="field">
+        <div class="field"{if !$settings.status} style="display:none"{/if}>
             <div class="name">
                 Типы заказов
             </div>
             <div class="value">
                 <ul class="menu-v stack with-icons">
                     {foreach $states as $id => $s}
-                    <li>
-                        <input {if isset($settings.states[$id]) && $settings.states[$id]}checked="checked"{/if} class="s-checkbox" type="checkbox" name="shop_mergerorder[states][{$id}]" value="1"/>
+                        <li>
+                            <input {if !empty($settings.states[$id])}checked="checked"{/if} class="s-checkbox" type="checkbox" name="shop_mergerorder[states][{$id}]" value="1"/>
                             <span style="{$s->getStyle()}">
-                            <i class="{$s->getOption('icon')}"></i>{$s->getName()}
-                        </span>
-                    </li>
+                                <i class="{$s->getOption('icon')}"></i>{$s->getName()}
+                            </span>
+                        </li>
                     {/foreach}
                 </ul>
                 <p class="hint">Типы заказов, которые могут быть объединены</p>
             </div>
         </div>
 
-
-        <div class="field">
+        <div class="field"{if !$settings.status} style="display:none"{/if}>
             <div class="name">
-                Уведомление по E-mail
+                Доставка
             </div>
             <div class="value">
-                <select name="shop_mergerorder[email_notification]">
-                    <option {if $settings.email_notification == 1} selected="selected"{/if} value="1">Да</option>
-                    <option {if $settings.email_notification == 0} selected="selected"{/if} value="0">Нет</option>
-                </select>
+                <ul class="menu-v">
+                    <li>
+                        <input type="radio" name="shop_mergerorder[shipping]" value="sum"{if $settings.shipping|default:'auto' == 'sum'} checked=""{/if}/> Сумма
+                        <p class="hint">Итоговая стоимость доставки вычисляется как сумма доставок объединяемых заказов</p>
+                    </li>
+                    <li>
+                        <input type="radio" name="shop_mergerorder[shipping]" value="max"{if $settings.shipping|default:'auto' == 'max'} checked=""{/if}/> Максимум
+                        <p class="hint">В качестве итоговой стоимости доставки берется максимальная доставка</p>
+                    </li>
+                    <li>
+                        <input type="radio" name="shop_mergerorder[shipping]" value="auto"{if $settings.shipping|default:'auto' == 'auto'} checked=""{/if}/> Авто
+                        <p class="hint">Стоимость доставки рассчитывается автоматически</p>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="field"{if !$settings.status} style="display:none"{/if}>
+            <div class="name">
+                Скидка
+            </div>
+            <div class="value">
+                <ul class="menu-v">
+                    <li>
+                        <input type="radio" name="shop_mergerorder[discount]" value="sum"{if $settings.discount|default:'auto' == 'sum'} checked=""{/if}/> Сумма
+                        <p class="hint">Итоговая скидка определяется как сумма скидок по всем заказам</p>
+                    </li>
+                    <li>
+                        <input type="radio" name="shop_mergerorder[discount]" value="auto"{if $settings.discount|default:'auto' == 'auto'} checked=""{/if}/> Авто
+                        <p class="hint">Скидка рассчитывается автоматически</p>
+                    </li>
+                </ul>
             </div>
         </div>
 
-        <div class="field">
+        <div class="field"{if !$settings.status} style="display:none"{/if}>
+            <div class="name">
+                Уведомление по E-mail
+            </div>
+            <div class="value no-shift s-ibutton-checkbox">
+                <input type="hidden" name="shop_mergerorder[email_notification]" value="0">
+                <input type="checkbox" id="ibutton-email-notification" name="shop_mergerorder[email_notification]" value="1"{if $settings.email_notification|default:'1'} checked{/if}>
+            </div>
+        </div>
+
+        <div class="field email-notification"{if !$settings.status || !$settings.email_notification|default:'1'} style="display:none"{/if}>
             <div class="name">
                 Текст сообщения<br><span class="hint">HTML + Smarty</span>
             </div>
             <div class="value no-shift">
                 <div id="s-editor-core-wrapper">
                     <textarea id="sf-template" class="body" name="shop_mergerorder[body]">{$settings.body|escape}</textarea>
-                    <p>{ldelim}$merged_orders{rdelim}  - Список объединенных заказов.</p>
-                    
+                    <p class="hint"><strong>{ldelim}$merged_orders{rdelim}</strong> - Список объединенных заказов.</p>
+
                 </div>
             </div>
         </div>
 
-
-
-        <div class="field">
+        <div class="field"{if !$settings.status} style="display:none"{/if}>
             <div class="value submit">
                 <input type="submit" class="button green" value="Сохранить">
                 <span id="plugins-settings-form-status" style="display:none">
@@ -85,37 +134,9 @@
         </div>
     </form>
 </div>
-
+<script type="text/javascript" src="{$wa_app_static_url}plugins/mergerorder/js/settings.js?{$plugin->getVersion()}"></script>
 <script type="text/javascript">
-    $(function() {
-
-        var c = CodeMirror.fromTextArea(document.getElementById('sf-template'), {
-            mode: "text/html",
-            tabMode: "indent",
-            height: "dynamic",
-            lineWrapping: true
-        });
-        $("#sf-template").change(function() {
-            c.setValue($(this).val())
-        });
-        $("#sf-settings").submit(function() {
-            var f = $(this);
-            $.post(f.attr('action'), f.serialize(), function(response) {
-                if (response.status == 'ok') {
-                    $('#wa-design-button').removeClass('red').addClass('green');
-                    $("#wa-editor-status-fail").hide()
-                    $("#wa-editor-status-ok span").html(response.data.message);
-                    $("#wa-editor-status-ok").fadeIn('slow', function() {
-                        $(this).fadeOut(1000);
-                    });
-                } else {
-                    $('#wa-design-button').removeClass('green').addClass('red');
-                    $("#wa-editor-status-ok").hide();
-                    $("#wa-editor-status-fail span").html(response.errors.join(', '));
-                    $("#wa-editor-status-fail").fadeIn('slow');
-                }
-            }, "json")
-            return false;
-        });
+    $(function () {
+        $.mergerorder_settings.init();
     });
 </script>
